--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
@@ -9,8 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: Never remove the following script reference, otherwise advanced features like element editing will not work -->
-    <script src="https://static.devv.ai/devv-app.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
